src/objects/Experiences__c.object
<CustomObject>
    <description>Experiences used by MotoDEv Incident #INC000002301209</description>
    <fields>
        <fullName>BLUR_Included__c</fullName>
        <label>BSR Included?</label>
        <picklist>
            <picklistValues>
                <fullName>BLUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO BLUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Messaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widgets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchronization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MAP_Release__c</fullName>
        <label>MAP Release</label>
        <picklist>
            <picklistValues>
                <fullName>MAP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aloqa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Experience</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Category__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <roleAndSubordinates>MotoDevAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevBusOpsAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevDirector</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveCLevel</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveSVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevManager</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrDirector</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Experiences Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>